안 쓰는거 정리